--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     <div class="container-fluid">
         <div class="">
             <header>
-                18CSE301J Information Visualization Project
+                Information Visualization Project
                 <h1>RA2011003011129<br>Rishabh Dharmik</h1>
             </header>
         </div>
