--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         }
 
         header {
-            background-color: cyan;
             padding: 50px;
             text-align: center;
             font-size: 75px;
@@ -276,7 +275,7 @@
         <div class="">
             <header>
                 Information Visualization Project
-                <h1>RA2011003011129<br>Rishabh Dharmik</h1>
+                <h1>Rishabh Dharmik</h1>
             </header>
         </div>
 
@@ -284,9 +283,9 @@
             <button class="w3-bar-item w3-button tablink w3-w3-margin " onclick="github()"><u>Github</u></button>
             <button class="w3-bar-item w3-button tablink w3-padding w3-white" onclick="welcome()"> <u>Individual
                     Project</u></button>
-            <button class="w3-bar-item w3-button tablink w3-w3-margin " onclick="tableau_indiv()"><u>tableau
+            <button class="w3-bar-item w3-button tablink w3-w3-margin " onclick="tableau_indiv()"><u>Tableau
                     Individual</u></button>
-            <button class="w3-bar-item w3-button tablink w3-w3-margin " onclick="tableau_grp()"><u>tableau
+            <button class="w3-bar-item w3-button tablink w3-w3-margin " onclick="tableau_grp()"><u>Tableau
                     Group</u></button>
         </div>
     </div>
